ingress/test1/ingress-9999.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress-9999
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.111.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ngx-service-9999
            port:
              number: 9999
